tests/ui/cast/issue-85586.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-85586.rs:8:13
   |
LL |     let b = (a + 1) as usize;
   |             ^^^^^^^ cannot infer type

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0282`.
